--- a/hsp.cs/hsp.cs.csproj
+++ b/hsp.cs/hsp.cs.csproj
@@ -99,6 +99,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Analyzer.cs" />
+    <Compile Include="Definition.cs" />
     <Compile Include="HSP.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
